--- a/index.html
+++ b/index.html
@@ -19,6 +19,8 @@
         <img src="assets/images/title.png"  id="title">
         <div id="sub-wrapper">
           <div class="jumbotron" id="quiz-area">
+            <h1 style="color: blue">Enter your Name :   </h1> 
+            <input type="text" id="name" value=" "><br><br>
             <button type="button" class="btn btn-primary btn-lg" id="start">Start</button>
           </div>
         </div>
